api get list product and category
