# docs/swagger.json
@@ -15,7 +15,26 @@
                 "tags": [
                     "Category"
                 ],
-                "summary": "create category",
+                "summary": "get list categories",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/v1/product/search": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "search products with filter and return pagination",
                 "parameters": [
                     {
                         "description": "CreateCategoryReq",
@@ -68,8 +87,11 @@
     "definitions": {
         "models.CreateCategoryReq": {
             "type": "object",
+            "required": [
+                "category_name"
+            ],
             "properties": {
-                "name": {
+                "category_name": {
                     "type": "string"
                 }
             }
